[package]
name = "symex"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rustc-demangle = "0.1.21"
tracing = "0.1"
tracing-subscriber = "0.3"
paste = "1.0.14"

indenter = "0.3"
colored = "2.0"
rand = "0.8.5"
object = "0.32.1"

gimli = "0.28.0"
regex = "1.10.2"


# Internal language.
transpiler = { path = "../symex/transpiler" }
general_assembly = { path = "../symex/general_assembly" }

# SMT-backends
boolector = {git = "https://github.com/ivajon/boolector-rs.git", features = [] }
bitwuzla = {git = "https://github.com/ivajon/boolector-rs.git", branch = "bitwuzla"}


# Parsing-backends.
armv6-m-instruction-parser = "0.3.0-rc1"
disarmv7 = { git = "https://github.com/ivajon/disarmv7", branch = "floats" }
hashbrown = "0.15.2"
kd-tree = "0.6.0"
fst = "0.4.7"
regex-automata = { version = "0.1.9", features = ["transducer"] }
dyn-clone = "1.0.18"
risc-v-disassembler = { git = "https://github.com/simlar-0/RISC-V-disassembler.git", branch = "main" }

[features]
default = []

log = []
